...
        android:paddingBottom="10dp" />

    <Button
        android:text="@string/in_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnInShop" />

    <Button
        android:text="@string/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEdit" />
...
