...
    android:focusable="false"
    android:theme="@style/AppTheme.AppBarOverlay">

    <fragment android:name="com.RightDirection.ShoppingList.views.InputNewItemFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newItemFragment"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/addItemHint"
...
